refactor: refactor shouldAcceptTrucoIfIHaveOurosAndLostTheFirstRound test to use mock