@@ -562,12 +562,10 @@ public class PatoBotTest {
     @Test
     @DisplayName("Should decline 'Truco' if i have middle cards and lost the first round")
     public void shouldAcceptTrucoIfIHaveOurosAndLostTheFirstRound() {
-        TrucoCard card1 = TrucoCard.of(CardRank.THREE, CardSuit.DIAMONDS);
-        TrucoCard card2 = TrucoCard.of(CardRank.FIVE, CardSuit.DIAMONDS);
-        TrucoCard vira = TrucoCard.of(CardRank.ACE, CardSuit.SPADES);
-        when(intel.getRoundResults()).thenReturn(List.of(GameIntel.RoundResult.LOST));
-        when(intel.getCards()).thenReturn(Arrays.asList(card1, card2));
-        when(intel.getVira()).thenReturn(vira);
+        card1 = TrucoCard.of(CardRank.THREE, CardSuit.DIAMONDS);
+        card2 = TrucoCard.of(CardRank.FIVE, CardSuit.DIAMONDS);
+        vira = TrucoCard.of(CardRank.ACE, CardSuit.SPADES);
+        setupCardsViraAndRoundResult(Arrays.asList(card1, card2), vira, List.of(GameIntel.RoundResult.LOST));
         assertThat(patoBot.getRaiseResponse(intel)).isEqualTo(-1);
     }
 
